ECMS-4195 fix problem with horizontal scroll bar in ECMS-4589

--- a/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
+++ b/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
@@ -422,6 +422,10 @@
 	overflow-x: auto;
 }
 
+.UIJCRExplorerPortlet .UIFileView .UIListGrid {
+	overflow-x: hidden;
+}
+
 .UIJCRExplorerPortlet .UIListView .TitleTable {
 	font-weight: bold;
 	line-height: 25px; height: 27px;
